...
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <!-- 600width  935height-->
    <RelativeLayout
        android:id="@+id/editView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
...
            android:layout_marginStart="-32dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/ImageView" />

        <ImageButton
            android:id="@+id/infoEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ImageView"
            android:layout_alignRight="@+id/ImageView"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:background="#0000"
            android:src="@drawable/ic_info_outline_black_24dp"
            tools:ignore="contentDescription" />

        <EditText
            android:id="@+id/searchByDescText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/enter_description"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/searchByAmountText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchByDescText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/enter_amount"
            android:inputType="text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/infoEditButton"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/searchByAmountText"
            android:layout_toRightOf="@+id/searchByAmountText"
...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/results"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultsLabel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
...
