...
        android:layout_height="35dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="2dp"/>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:background="@drawable/buttoneditmainstyle"
        android:text="@string/edit"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:background="@drawable/buttondelstyle"
        android:text="@string/delete"
        android:layout_marginTop="3dp"/>

...
